--- a/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
+++ b/NurseryPolije/app/src/main/res/layout/activity_ubah_password.xml
@@ -5,31 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UbahPassword">
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:weightSum="12">
+        android:layout_height="50dp"
+        android:paddingHorizontal="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/login_shape_bk">
 
-        <LinearLayout
-            style="@style/parent"
-            android:layout_weight="3"
-            android:background="@drawable/login_shape_bk"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/tvJudul"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Ubah Password"
+            android:textStyle="bold"
+            android:textColor="@color/putih"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="18dp" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                style="@style/parent"
-                android:contentDescription="login background"
-                android:layout_width="match_parent"
-                android:src="@drawable/ic_login_bk" />
-
-        </LinearLayout>
-    </LinearLayout>
-    <TextView
-        style="@style/headerText"
-        android:layout_gravity="center"
-        android:text="UBAH PASSWORD"
-        android:layout_marginTop="80dp"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <include
         layout="@layout/ubah_pass"/>
