--- a/NurseryPolije/app/src/main/res/layout/item_list_dikemas.xml
+++ b/NurseryPolije/app/src/main/res/layout/item_list_dikemas.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="90dp">
+        android:layout_height="90dp"
+        android:background="@drawable/itemkeranjang">
 
         <ImageView
             android:id="@+id/ivPoster"
